Изменил шрифт для подзаголовков

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -84,7 +84,7 @@ Version: 1.0
   --silver-color: #aeaeae;
   --theme-font1: "Roboto", sans-serif;
   --theme-font2: "Rufina", serif;
-  --theme-font3: "Cookie", cursive;
+  --theme-font3: "Bonjour Mon Ami RUS", cursive;
   --icon-font: "Font Awesome 5 Pro";
   --icon-font2: "Flaticon";
 }
